--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,12 @@
         <item>Zwierzęta</item>
     </string-array>
 
+    <string-array name="spinner_items2">
+        <item>Jedzenie</item>
+        <item>Ubrania</item>
+        <item>Zwierzęta</item>
+    </string-array>
+
     <string name="title_activity_settings">SettingsActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
