--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,48 +1,44 @@
 <resources>
     <string name="app_name">LangMaster</string>
-    <string name="title_activity_registration">RegistrationActivity</string>
+    <string name="title_activity_registration" translatable="false">RegistrationActivity</string>
 
-    <string name="title_activity_settings">SettingsActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
+    <string name="first_fragment_label" translatable="false">First Fragment</string>
+    <string name="second_fragment_label" translatable="false">Second Fragment</string>
+    <string name="next" translatable="false">Next</string>
+    <string name="previous" translatable="false">Previous</string>
 
-    <string name="lorem_ipsum">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
-        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
-        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
-        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
-        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
-        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
-        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
-        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
-        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
-        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
-        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
-        bibendum, vel congue leo egestas.\n\n
-        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
-        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
-        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
-        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
-        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
-        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
-        est.\n\n
-        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
-        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
-        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
-        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
-        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
-        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
-        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
-        convallis.\n\n
-        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
-        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
-        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
-        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
-        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
-        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
-    </string>
+    <string name="witamy">WITAMY!</string>
+    <string name="wybierz_jezyk">WYBIERZ Język</string>
+    <string name="ustawienia">USTAWIENIA</string>
+    <string name="wybierz_kategorie">WYBIERZ KATEGORIĘ</string>
+    <string name="powrot">POWRÓT</string>
+    <string name="haslo">HASŁO:</string>
+    <string name="zaloguj_sie">ZALOGUJ SIĘ</string>
+    <string name="rejestracja">Nie masz konta? Zarejestruj się</string>
+    <string name="nauka_slowek">NAUKA SŁÓWEK</string>
+    <string name="slownik">SŁOWNIK</string>
+    <string name="zdania">ZDANIA</string>
+    <string name="ciekawostki">CIEKAWOSTKI</string>
+    <string name="tlumacz">TŁUMACZ</string>
+    <string name="imie">IMIĘ:</string>
+    <string name="nazwisko">NAZWISKO:</string>
+    <string name="zatwierdz">ZATWIERDŹ</string>
+    <string name="utworz_konto">UTWÓRZ KONTO</string>
+    <string name="poprzednie">POPRZEDNIE</string>
+    <string name="nastepne">NASTĘPNE</string>
+    <string name="uzupelnij_zdania">UZUPEŁNIJ ZDANIA</string>
+    <string name="zmien_jezyk">ZMIEŃ JĘZYK APLIKACJI:</string>
+    <string name="angielski">ANGIELSKI</string>
+    <string name="polski">POLSKI</string>
+    <string name="strona_glowna">STRONA GŁÓWNA</string>
+    <string name="wyloguj">WYLOGUJ SIĘ</string>
+    <string name="przetlumacz">Przetłumacz</string>
+    <string name="tlumaczenie">Tłumaczenie</string>
+    <string name="wpisz_tekst">WPISZ TEKST:</string>
+    <string name="z">Z</string>
+    <string name="na">NA</string>
+    <string name="nastepne_slowo">NASTĘPNE SŁOWO</string>
+    <string name="losowe_slow">LOSOWE SŁOWO</string>
+    <string name="wpisz_tlumaczenie_slowa">WPISZ TŁUMACZENIE PODANEGO SŁOWA :</string>
 </resources>
