--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,19 @@
     <string name="nastepne_slowo">NASTĘPNE SŁOWO</string>
     <string name="losowe_slow">LOSOWE SŁOWO</string>
     <string name="wpisz_tlumaczenie_slowa">WPISZ TŁUMACZENIE PODANEGO SŁOWA :</string>
+    <string name="select_category">Wybierz kategorię</string>
+
+
+    <string-array name="languages">
+        <item>Angielski</item>
+        <item>Niemiecki</item>
+    </string-array>
+
+    <string-array name="categories">
+        <item>Jedzenie</item>
+        <item>Zwierzęta</item>
+        <item>Technologia</item>
+        <item>Szkoła</item>
+    </string-array>
+
 </resources>
